--- a/posts/201805.md
+++ b/posts/201805.md
@@ -46,7 +46,7 @@ Obelisk team [posted](https://medium.com/obelisk-blog/obelisk-update-january-may
 
 David Vorick (@taek) [published](https://blog.sia.tech/the-state-of-cryptocurrency-mining-538004a37f9b) lots of insights into the world of ASIC manufacturing ([reddit](https://www.reddit.com/r/decred/comments/8jjyca/the_state_of_cryptocurrency_mining_by_david_vorick/)). Bitmain [replied](https://blog.bitmain.com/en/bitmain-sia-state-cryptocurrency-mining/).
 
-New Chinese miner was noticed by our Telegram group. Woodpecker WB2 specs 1.5 TH/s at 1200 W, costs 15,000 CNY (~2,340 USD) and the initial 150 units are expected to ship on Aug 15. ([pow8.com](https://pow8.com/product.php), [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://pow8.com/product.php))
+New Chinese miner was noticed by our Telegram group. Woodpecker WB2 specs 1.5 TH/s at 1200 W, costs 15,000 CNY (~2,340 USD) and the initial 150 units are expected to ship on Aug 15. ([pow8.com](https://pow8.com/product.php) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://pow8.com/product.php))
 
 Another new miner is iBelink DSM6T: 6 TH/s at 2100 W costing $6,300 ([ibelink.co](https://ibelink.co/product/ibelink-dsm6t-blake256-miner-with-6-th-s-hash-rate/)). Shipping starts from June 5. Some concerns and links were posted in these [two](https://www.reddit.com/r/decred/comments/8kutc4/ibelink_6th_miner/) [threads](https://www.reddit.com/r/decred/comments/8ljg9t/ibelink_decred_miner_available/dzg8f7v/).
 
@@ -70,7 +70,7 @@ OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) 
 
 ## Adoption
 
-[Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. This happened in April but was omitted in previous post.
+[Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. (omitted in April issue)
 
 [FastTech](https://www.fasttech.com/), a gadgets and electronics shop, now [accepts](https://support.fasttech.com/FAQ/do-you-accept-bitcoin) Decred and [offers](https://www.reddit.com/r/decred/comments/8hmedm/fasttechcom_now_accepts_dcr_as_payment/) a discount code on our reddit.
 
@@ -107,13 +107,13 @@ Reminder: Stakey has his own Twitter [account](https://twitter.com/dcrstakey) wh
 
 ## Events
 
-[BitConf](http://www.bitconf.com.br/2018SP/) in Sao Paulo, Brazil. Jake Yocom-Piatt presented "Decentralized Central Banking". Note the mini stakey on one of the photos. ([article](https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/) ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/)), photos: [1](https://twitter.com/decredproject/status/992818912969441281) [2](https://twitter.com/decredproject/status/993238725663408128) [album](https://www.facebook.com/groups/975727812500893/permalink/1930636967009968/))
+[BitConf](http://www.bitconf.com.br/2018SP/) in Sao Paulo, Brazil. Jake Yocom-Piatt presented "Decentralized Central Banking". Note the mini stakey on one of the photos. ([article](https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=https://www.criptomoedasfacil.com/decred-participou-da-vi-bitconf/), photos: [1](https://twitter.com/decredproject/status/992818912969441281) [2](https://twitter.com/decredproject/status/993238725663408128) [album](https://www.facebook.com/groups/975727812500893/permalink/1930636967009968/))
 
 [Wicked Crypto Meetup](https://www.meetup.com/WICKED-CRYPTO-MEETUP/events/248905213/) in Warsaw, Poland. ([video](https://www.youtube.com/watch?v=Pp8jABDi-9I), photos: [1](https://twitter.com/decredproject/status/993592753249435648) [2](https://twitter.com/NoahPierau/status/993841736702193665))
 
 [Decred Polska Meetup](https://www.meetup.com/Decred-Polska/events/250167470/) in Katowice, Poland. First known Decred Cake. (photos: [1](https://twitter.com/NoahPierau/status/993893397957095425) [2](https://twitter.com/Decred_PL/status/993910795657531399))
 
-[Consensus 2018](https://www.coindesk.com/events/consensus-2018/) in New York, USA. Photos: [booth](https://twitter.com/jz_bz/status/995789387173687297), [escort](https://twitter.com/jm_buirski/status/995809354652704768), [crew](https://twitter.com/jz_bz/status/995881313860284417), [moon boots](https://twitter.com/marco_peereboom/status/996025751119024128), [giant stakey](https://twitter.com/WhalePanda/status/996037853082681345). Lots of photos and Twitter mentions. One tweet summarized Decred pretty well:
+[Consensus 2018](https://www.coindesk.com/events/consensus-2018/) in New York, USA. See videos in the Media section. Photos: [booth](https://twitter.com/jz_bz/status/995789387173687297), [escort](https://twitter.com/jm_buirski/status/995809354652704768), [crew](https://twitter.com/jz_bz/status/995881313860284417), [moon boots](https://twitter.com/marco_peereboom/status/996025751119024128), [giant stakey](https://twitter.com/WhalePanda/status/996037853082681345). Lots of photos and Twitter mentions. One tweet summarized Decred pretty well:
 
 > One project that stands out at #Consensus2018 is @decredproject. Not annoying. Real tech. Humble team. #BUIDL is strong with them. ([@PallerJohn](https://twitter.com/PallerJohn/status/996188461760696321))
 
@@ -138,43 +138,30 @@ There is a community initiative by @vj to organize information related to events
 
 ## Media
 
-* Team Spotlight: Decred, Pedal Steel Guitar, and Thoughts on Bitcoin From an Exodus Developer ([medium.com](https://medium.com/exodus-movement/team-spotlight-decred-pedal-steel-guitar-and-thoughts-on-bitcoin-from-an-exodus-developer-ace9f713a3d9), [reddit](https://www.reddit.com/r/decred/comments/8ixb1s/exodus_lead_dev_specifically_mentions_decred/))
-* https://cryptovest.com/news/decred-dcr-price-booms-on-consensus-2018-publicity/
-  * translated to ES https://es.insider.pro/tutorials/2018-05-18/criptomoneda-decred-guia-completa/ and RU https://ru.insider.pro/tutorials/2018-05-18/kriptovalyuta-decred-polnoe-rukovodstvo/
-* https://www.investopedia.com/news/decred-cryptocurrency-combines-pow-pos/
-* https://cryptovest.com/news/decred-dcr-price-booms-on-consensus-2018-publicity/
-* Iterative Capital Partner Chris Dannen and journalist Ben Schiller speak with Marco and Jonathan from Decred at Consensus 2018 ([soundcloud](https://soundcloud.com/iterative-capital/the-decred-team))
-* Decred Review: What is DCR, the Decred Community, & Possible Challenges ([youtube](https://www.youtube.com/watch?v=4RpYh8ZlndM))
+* Team Spotlight: Decred, Pedal Steel Guitar, and Thoughts on Bitcoin From an Exodus Developer ([medium.com](https://medium.com/exodus-movement/team-spotlight-decred-pedal-steel-guitar-and-thoughts-on-bitcoin-from-an-exodus-developer-ace9f713a3d9), omitted in April issue)
+* Decred: A Cryptocurrency That Combines PoW, PoS ([investopedia.com](https://www.investopedia.com/news/decred-cryptocurrency-combines-pow-pos/), translated to [Spanish](https://es.insider.pro/tutorials/2018-05-18/criptomoneda-decred-guia-completa/) and [Russian](https://ru.insider.pro/tutorials/2018-05-18/kriptovalyuta-decred-polnoe-rukovodstvo/))
+* Decred Price Booms on Consensus 2018 Publicity ([cryptovest.com](https://cryptovest.com/news/decred-dcr-price-booms-on-consensus-2018-publicity/))
+* Iterative Capital partner Chris Dannen and journalist Ben Schiller speak with Marco and Jonathan from Decred at Consensus 2018 ([soundcloud](https://soundcloud.com/iterative-capital/the-decred-team))
+* Decred Review: What is DCR, the Decred Community & Possible Challenges by BitBoy Crypto ([youtube](https://www.youtube.com/watch?v=4RpYh8ZlndM))
 * Decred Leads By Example With Fair Governance ([cryptodaily.co.uk](https://cryptodaily.co.uk/2018/05/decred-dcr-leads-example-fair-governance/))
 * Graph showing your ticket's chance to vote on any given day ([twitter](https://twitter.com/stakeynet/status/997215644281069568))
-* https://cryptovest.com/news/sole-survivor-decred-dcr-unaffected-in-latest-market-downturn/
-* https://btcmanager.com/placeholder-vc-puts-money-on-decred-to-rival-bitcoin/
-* https://seekingalpha.com/article/4176171-decred-undervalued-cryptocurrency-15-percent-dividend-like-yield-possibly-next-bitcoin
-* https://theoofy.com/12161/decred-coin-news-what-makes-decred-dcr-coin-price-to-go-over-100/
-* Decred Founder: Bitcoin Paved Way, Phase 2 Will Shock You! (Marco Peereboom) ([youtube](https://www.youtube.com/watch?v=DC4dmTQd8vU), Pure Blockchain Wealth)
-* https://cryptovest.com/news/decred-dcr-more-steps-to-fame-as-price-shoots-above-110/
-* Decred & Blocknet: Revolutionary governance for every community feat. JZ at Consensus 2018 https://www.youtube.com/watch?v=5OdrAGpVa7U
-* Great compilation of "Why Decred?" responses from the community: https://medium.com/decred/why-decred-let-the-community-tell-you-5479929e35d2 by Noah Pierau
-* Decred coin - Will it be better than Bitcoin? by Bitassist https://www.youtube.com/watch?v=dZ34FwDZOaQ
-* https://medium.com/@DecredKing/decred-2-years-old-bitcoin-10-years-old-do-we-care-which-was-first-no-we-dont-8c6874845b3d
-* https://globalcoinreport.com/why-decred-dcr-is-the-new-bitcoin/
-* https://btcmanager.com/hardware-companies-are-launching-dedicated-asic-miners-for-decred/
-* https://medium.com/sunrise-over-the-merkle-trees/the-long-term-bullish-case-for-decred-e7ed7cd1f99f by Ben Davidow
+* Decred Founder: Bitcoin Paved Way, Phase 2 Will Shock You! (Marco Peereboom) by Pure Blockchain Wealth ([youtube](https://www.youtube.com/watch?v=DC4dmTQd8vU))
+* Decred: More Steps to Fame, as Price Shoots Above $110 ([cryptovest.com](https://cryptovest.com/news/decred-dcr-more-steps-to-fame-as-price-shoots-above-110/))
+* Sole Survivor: Decred Unaffected in Latest Market Downturn ([cryptovest.com](https://cryptovest.com/news/sole-survivor-decred-dcr-unaffected-in-latest-market-downturn/))
+* Placeholder VC Puts Money on Decred to Rival Bitcoin ([btcmanager.com](https://btcmanager.com/placeholder-vc-puts-money-on-decred-to-rival-bitcoin/))
+* Decred Is The Most Undervalued Cryptocurrency With A 15% Dividend-Like Yield, Possibly The Next Bitcoin ([seekingalpha.com](https://seekingalpha.com/article/4176171-decred-undervalued-cryptocurrency-15-percent-dividend-like-yield-possibly-next-bitcoin))
+* Decred Coin News: What makes Decred coin price to go over $100? ([theoofy.com](https://theoofy.com/12161/decred-coin-news-what-makes-decred-dcr-coin-price-to-go-over-100/))
+* Decred & Blocknet: Revolutionary governance for every community feat. JZ at Consensus 2018 ([youtube](https://www.youtube.com/watch?v=5OdrAGpVa7U))
+* Why Decred? Let the community tell you! by Noah Pierau ([medium.com](https://medium.com/decred/why-decred-let-the-community-tell-you-5479929e35d2))
+* Decred coin - Will it be better than Bitcoin? by Bitassist ([youtube](https://www.youtube.com/watch?v=dZ34FwDZOaQ))
+* A post by @DecredKing arguing being first in crypto is not enough ([medium.com](https://medium.com/@DecredKing/decred-2-years-old-bitcoin-10-years-old-do-we-care-which-was-first-no-we-dont-8c6874845b3d))
+* Why Decred is the new Bitcoin ([globalcoinreport.com](https://globalcoinreport.com/why-decred-dcr-is-the-new-bitcoin/))
+* The Long-Term Bullish Case for Decred by Ben Davidow ([medium.com](https://medium.com/sunrise-over-the-merkle-trees/the-long-term-bullish-case-for-decred-e7ed7cd1f99f))
+* Hardware Companies Are Launching Dedicated ASIC Miners for Decred ([btcmanager.com](https://btcmanager.com/hardware-companies-are-launching-dedicated-asic-miners-for-decred/))
 
-China Electronic Information Industry Development is developing an independent ranking system for blockchains. First round of evaluation included Decred. Announcement:
+China Electronic Information Industry Development is developing an independent ranking system for blockchains. First round of evaluation included Decred ([announcement](http://www.ccidnet.com/2018/0511/10385800.shtml) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml), [reddit](https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/)). Upon [release](http://special.ccidnet.com/pub-bc-eval/) Decred ranked 26. For context, Bitcoin ranked 13.
 
-* https://www.coindesk.com/china-backed-researchers-to-rank-the-worlds-blockchains/
-* https://cointelegraph.com/news/china-will-issue-blockchain-standards-in-2019-says-govt-official
-* https://twitter.com/chengdoo/status/994932491591999489
-* http://www.ccidnet.com/2018/0511/10385800.shtml
-* translated https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml
-* https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/
-
-Later it was released, Decred ranked 26. For some context, Bitcoin ranked 13.
-
-* TODO links
-
-In other ratings, Decred scored B in Weiss ratings (top 3) https://www.reddit.com/r/decred/comments/8n86d4/decred_gets_a_b_in_the_new_weiss_ratings_for_what/ and A- in DPRating https://medium.com/@DPRating/dprating-the-crypto-rating-report-of-over-70-projects-may-edition-f3c8b96f6d17
+In other ratings, Decred scored B (top 3) in [Weiss Ratings](https://www.reddit.com/r/decred/comments/8n86d4/decred_gets_a_b_in_the_new_weiss_ratings_for_what/) and A- (top 8) in [Darpal Rating](https://medium.com/@DPRating/dprating-the-crypto-rating-report-of-over-70-projects-may-edition-f3c8b96f6d17).
 
 ## Community Discussions
 
