--- a/posts/201805.md
+++ b/posts/201805.md
@@ -72,7 +72,7 @@ OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) 
 
 ## Adoption
 
-[Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. (omitted from April issue)
+[Paytomat](https://paytomat.com/), payments solution for point of sale and e-commerce, [integrated](https://medium.com/paytomat/paytomat-development-report-monthly-updates-5cb695b1a60e) Decred. (missed in April issue)
 
 CoinPayments, a payment processor supporting Decred, has [developed](https://twitter.com/coinpaymentsnet/status/996832463694393344) an integration with [@Shopify](https://twitter.com/Shopify) that allows connected merchants to accept cryptocurrencies in exchange for goods.
 
@@ -95,10 +95,6 @@ Placeholder Ventures [announced](https://twitter.com/placeholdervc/status/995339
 > By choosing not to pre-sell coins to speculators, the financial rewards from Decred’s growth most favor those who work for the network.
 
 Alex Evans, a cryptoeconomics researcher who recently [joined](https://twitter.com/placeholdervc/status/1002216891446976512) Placeholder, [posted](https://twitter.com/alexhevans/status/1002232216875872257) his 13-page [Decred Network Analysis](https://gateway.ipfs.io/ipfs/QmPBqq3g3LuXiauZdaEcNtQUQ3QUTJUSnT8XuBXPw2be6V/Decred%20Analysis%20-%20Alex.pdf).
-
-@i2Rav started posting OTC quotes on [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel:
-
-> We have begun trading DCR in large volume daily. The interest around DCR has really started to grow in terms of OTC quote requests. More and more customers are asking about trading it.
 
 ## Marketing
 
@@ -147,7 +143,7 @@ There is a community initiative by @vj to organize information related to events
 
 ## Media
 
-* Team Spotlight: Decred, Pedal Steel Guitar, and Thoughts on Bitcoin From an Exodus Developer ([medium.com](https://medium.com/exodus-movement/team-spotlight-decred-pedal-steel-guitar-and-thoughts-on-bitcoin-from-an-exodus-developer-ace9f713a3d9), omitted from April issue)
+* Team Spotlight: Decred, Pedal Steel Guitar, and Thoughts on Bitcoin From an Exodus Developer ([medium.com](https://medium.com/exodus-movement/team-spotlight-decred-pedal-steel-guitar-and-thoughts-on-bitcoin-from-an-exodus-developer-ace9f713a3d9), missed in April issue)
 * Decred: A Cryptocurrency That Combines PoW, PoS ([investopedia.com](https://www.investopedia.com/news/decred-cryptocurrency-combines-pow-pos/), translated to [Spanish](https://es.insider.pro/tutorials/2018-05-18/criptomoneda-decred-guia-completa/) and [Russian](https://ru.insider.pro/tutorials/2018-05-18/kriptovalyuta-decred-polnoe-rukovodstvo/))
 * Decred Price Booms on Consensus 2018 Publicity ([cryptovest.com](https://cryptovest.com/news/decred-dcr-price-booms-on-consensus-2018-publicity/))
 * Iterative Capital partner Chris Dannen and journalist Ben Schiller speak with Marco and Jonathan from Decred at Consensus 2018 ([soundcloud](https://soundcloud.com/iterative-capital/the-decred-team))
@@ -169,9 +165,9 @@ There is a community initiative by @vj to organize information related to events
 * The Long-Term Bullish Case for Decred by Ben Davidow ([medium.com](https://medium.com/sunrise-over-the-merkle-trees/the-long-term-bullish-case-for-decred-e7ed7cd1f99f))
 * Hardware Companies Are Launching Dedicated ASIC Miners for Decred ([btcmanager.com](https://btcmanager.com/hardware-companies-are-launching-dedicated-asic-miners-for-decred/))
 
-China Electronic Information Industry Development is developing an independent ranking system for blockchains. First round of evaluation included Decred ([announcement](http://www.ccidnet.com/2018/0511/10385800.shtml) – [translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml), [reddit](https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/)). Upon [release](http://special.ccidnet.com/pub-bc-eval/) Decred ranked 26. For context, Bitcoin ranked 13.
+Decred scored B (top 3) in [Weiss Ratings](https://www.reddit.com/r/decred/comments/8n86d4/decred_gets_a_b_in_the_new_weiss_ratings_for_what/) and A- (top 8) in [Darpal Rating](https://medium.com/@DPRating/dprating-the-crypto-rating-report-of-over-70-projects-may-edition-f3c8b96f6d17).
 
-In other ratings, Decred scored B (top 3) in [Weiss Ratings](https://www.reddit.com/r/decred/comments/8n86d4/decred_gets_a_b_in_the_new_weiss_ratings_for_what/) and A- (top 8) in [Darpal Rating](https://medium.com/@DPRating/dprating-the-crypto-rating-report-of-over-70-projects-may-edition-f3c8b96f6d17).
+Chinese institute is [developing](https://www.reddit.com/r/decred/comments/8iv6d3/chinas_new_rating_system_decred_one_of_28/) another rating system for blockchains. First round [included](http://www.ccidnet.com/2018/0511/10385800.shtml) Decred ([translated](https://translate.google.com/translate?sl=auto&tl=en&hl=en&ie=UTF-8&u=http://www.ccidnet.com/2018/0511/10385800.shtml)). Upon [release](http://special.ccidnet.com/pub-bc-eval/) Decred ranked 26. For context, Bitcoin ranked 13.
 
 ## Community Discussions
 
@@ -194,6 +190,10 @@ The month of May has seen Decred earn some much deserved attention in the market
 The addition of a much awaited KRW pair on Upbit saw the price briefly double on some exchanges. This pair opens up direct DCR to fiat trading in one of the largest cryptocurrency markets in the world.
 
 May has really been a fantastic month for Decred, news-wise. Price influencing events include: the attendance of several Decred team members at Consensus 2018, the beta launch of ticket splitting toolset by @matheusd, Placeholder VC's bold "Decred Investment Thesis", and both Innosilicon AND iBeLink's surprise launches of yet 2 more Decred ASIC. The controversial independent Weiss crypto report has ranked Decred as one of the top 3 cryptocurrencies. Decred's uniquely secure hybrid PoW/PoS system has also started to get some attention following several high profile hashpower attacks.
+
+@i2Rav started posting OTC quotes on [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel:
+
+> We have begun trading DCR in large volume daily. The interest around DCR has really started to grow in terms of OTC quote requests. More and more customers are asking about trading it.
 
 ## Relevant External
 
