Add on-chain governance debates coverage, minor fixes

--- a/posts/201805.md
+++ b/posts/201805.md
@@ -4,7 +4,7 @@
 
 dcrd: Significant [optimization](https://github.com/decred/dcrd/pull/1179) in signature hash calculation, bloom filters support was [removed](https://github.com/decred/dcrd/pull/1162), 2x faster startup thanks to in-memory [full block index](https://github.com/decred/dcrd/pull/1229), multipeer work [advancing](https://github.com/decred/dcrd/issues/1145), stronger [protection](https://github.com/decred/dcrd/pull/1235) against majority hashpower attacks. Additionally, code refactoring and cleanup, code and test infrastructure improvements.
 
-In dcrd and dcrwallet developers have been experimenting with new modular dependency and versioning schemes using vgo.
+In dcrd and dcrwallet developers have been [experimenting](https://github.com/decred/dcrd/pull/1223) with new modular dependency and versioning schemes using vgo. @orthomind is seeking feedback for his work on [reproducible builds](https://github.com/decred/decred-binaries/pull/78).
 
 Decrediton: 1.2.1 bugfix [release](https://github.com/decred/decred-binaries/releases/tag/v1.2.1), work on SPV [has started](https://github.com/decred/decrediton/pull/1389), chart additions are in progress. Further simplification of the staking process is in the pipeline ([slack](https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062)).
 
@@ -15,8 +15,6 @@ dcrdata: work ongoing on [improved design](https://github.com/decred/dcrdata/iss
 Android: design work [advancing](https://github.com/decred/dcrandroid/issues/80).
 
 Decreds own [DNS seeder](https://github.com/decred/dcrseeder) (dcrseeder) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
-
-@orthomind is seeking feedback for his work on [reproducible builds](https://github.com/decred/decred-binaries/pull/78).
 
 Ticket splitting service by @matheusd [entered](https://twitter.com/decredproject/status/997560763727265792) beta and [demonstrated](https://www.youtube.com/watch?v=XsVJ1WWsWlA) an 11-way split on mainnet. Help with testing is much appreciated, please join [#ticket_splitting](https://decred.slack.com/messages/CAUF860P3/) to participate in splits, but check [this doc](https://github.com/matheusd/dcr-split-ticket-matcher/blob/master/docs/beta.md) to learn about the risks. Reddit discussion [here](https://www.reddit.com/r/decred/comments/8kgrqg/what_many_of_you_have_been_waiting_for_ticket/).
 
@@ -56,17 +54,14 @@ A new mining pool is [available](https://www.reddit.com/r/decred/comments/8hba71
 
 Another infrastructure addition is [tokensmart.io](https://tokensmart.io/), a newly audited stake pool with 0.8% fee. There are a total of 14 [stake pools](https://decred.org/stakepools/) now.
 
-Moving on to exchange integrations, Upbit added [DCR/KRW](https://twitter.com/decredproject/status/992453050425008128) and [DCR/USDT](https://twitter.com/decredproject/status/1001885561127292928) pairs. Deposits and withdrawals of DCR are [reportedly](https://decred.slack.com/archives/C3PBR19L4/p1526859809000035) now available.
+Moving on to exchange integrations:
 
-CoinEx [announced](https://twitter.com/coinexcom/status/994127050305777664) the launch of DCR/BTC and DCR/BCH pairs.
-
-Bleutrade [added](https://twitter.com/decredproject/status/999309765414039554) DCR/USDT pair. Note their [reply](https://twitter.com/BLEUTRADE/status/999683568791060481) to our tweet. It was the first exchange to list Decred minutes after launch.
-
-Brazilian exchange [OmniTrade](https://omnitrade.io/) [added](https://twitter.com/decredproject/status/999714011544350720) DCR/BRL fiat pair following a [poll](https://twitter.com/omnitrade_br/status/993294188795056128). Worth noting that it is one of the first to [integrate](https://twitter.com/omnitrade_br/status/976236441297719296) Trezor sign-in.
-
-Bittrex [added](https://twitter.com/bittrexexchange/status/999811198723022853) [DCR/USDT pair](https://bittrex.com/Market/Index?MarketName=USDT-DCR).
-
-Cryptopia silently enabled [DCR/USDT](https://www.cryptopia.co.nz/Exchange?market=DCR_USDT) pair too.
+* Upbit added [DCR/KRW](https://twitter.com/decredproject/status/992453050425008128) and [DCR/USDT](https://twitter.com/decredproject/status/1001885561127292928) pairs. A user [reported](https://decred.slack.com/archives/C3PBR19L4/p1526859809000035) that DCR deposits and withdrawals are now available.
+* CoinEx [announced](https://twitter.com/coinexcom/status/994127050305777664) the launch of DCR/BTC and DCR/BCH pairs.
+* Bleutrade [added](https://twitter.com/decredproject/status/999309765414039554) DCR/USDT pair. Note their [reply](https://twitter.com/BLEUTRADE/status/999683568791060481) to our tweet. It was the first exchange to list Decred minutes after launch.
+* Brazilian exchange [OmniTrade](https://omnitrade.io/) [added](https://twitter.com/decredproject/status/999714011544350720) DCR/BRL fiat pair following a [poll](https://twitter.com/omnitrade_br/status/993294188795056128). Worth noting that it is one of the first to [integrate](https://twitter.com/omnitrade_br/status/976236441297719296) Trezor sign-in.
+* Bittrex [added](https://twitter.com/bittrexexchange/status/999811198723022853) [DCR/USDT](https://bittrex.com/Market/Index?MarketName=USDT-DCR) pair. Withdrawal fee was lowered to 0.01 DCR per user's [report](https://decred.slack.com/archives/C0NRMDVMJ/p1527502501000413).
+* Cryptopia enabled [DCR/USDT](https://www.cryptopia.co.nz/Exchange?market=DCR_USDT) pair too.
 
 OpenBazaar [released](https://twitter.com/openbazaar/status/996526909587705856) an update that allows one to trade cryptocurrencies, [including](https://twitter.com/openbazaar/status/1000749737744756741) DCR.
 
@@ -95,7 +90,7 @@ Placeholder Ventures [announced](https://twitter.com/placeholdervc/status/995339
 
 > By choosing not to pre-sell coins to speculators, the financial rewards from Decred’s growth most favor those who work for the network.
 
-Alex Evans, a cryptoeconomics researcher who recently [joined](https://twitter.com/placeholdervc/status/1002216891446976512) Placeholder, [posted](https://twitter.com/alexhevans/status/1002232216875872257) his 13-page [Decred Network Analysis](https://gateway.ipfs.io/ipfs/QmPBqq3g3LuXiauZdaEcNtQUQ3QUTJUSnT8XuBXPw2be6V/Decred%20Analysis%20-%20Alex.pdf).
+Alex Evans, a cryptoeconomics researcher who recently joined Placeholder, [posted](https://twitter.com/alexhevans/status/1002232216875872257) his 13-page [Decred Network Analysis](https://gateway.ipfs.io/ipfs/QmPBqq3g3LuXiauZdaEcNtQUQ3QUTJUSnT8XuBXPw2be6V/Decred%20Analysis%20-%20Alex.pdf).
 
 ## Marketing
 
@@ -189,17 +184,19 @@ Reddit highlights: transparent [up/down voting](https://www.reddit.com/r/decred/
 
 Forum: potential [social attacks](https://forum.decred.org/threads/a-potential-social-attack-on-decred.5995/) on Decred.
 
-Twitter: decent [response](https://twitter.com/nwoodfine/status/999181111115661312) by @jm_buirski to shallow criticism of governance as "imagined problem".
+Slack: the [#governance](https://decred.slack.com/messages/CAAMEU56W/) channel created last month has seen many intelligent conversations on topics including: finite attention of decision makers, why stakeholders _can_ make good decisions (opposed to a common narrative than only developers are capable of making good decisions), proposal funding and contractor pre-qualification, Cardano and Dash treasuries, quadratic voting, equality of outcome vs equality of opportunity, and much more.
 
-Slack: the [#governance](https://decred.slack.com/messages/CAAMEU56W/) channel created last month has seen many intelligent conversations on topics including: finite attention of decision makers, why stakeholders _can_ make good decisions (opposed to a common narrative than only developers are capable of making good decisions), proposal funding and contractor pre-qualification, Cardano and Dash treasuries, quadratic voting, equality of outcome vs equality of opportunity, and much more. One particularly important issue being discussed is the observation that several people are very vocal in criticizing on-chain governance and coin voing.
+One particularly important issue being discussed is the growing number of posts arguing that on-chain governance and coin voting is bad. Just a few examples from Twitter: Decred is solving an [imagined problem](https://twitter.com/nwoodfine/status/999181111115661312) (decent [response](https://twitter.com/jm_buirski/status/999271148348170241) by @jm_buirski), we [convince](https://twitter.com/nic__carter/status/999691029514252289) ourselves that we need governance and ticket price algo vote was not controversial, on-chain governance [hurts](https://twitter.com/panekkkk/status/999758289230589952) node operators and it is [too early](https://twitter.com/panekkkk/status/999758294750257153) for it, it [robs](https://twitter.com/VladZamfir/status/935587447584440320) node operators of their role, crypto risks being [captured](https://twitter.com/VladZamfir/status/999921949370269698) by the wealthy, it is a [huge threat](https://twitter.com/VladZamfir/status/935589574075543552) to the whole public blockchain space, coin holders [should not](https://twitter.com/VladZamfir/status/971379367187230720) own the blockchain.
+
+Some responses were posted [here](https://twitter.com/lukebp_/status/1000227000982777857) and [here](https://twitter.com/NoahPierau/status/1000046513295384578) on Twitter, as well as this [article](https://medium.com/@NoahPierau/this-ignorance-will-not-stand-1de854ae1de4) by Noah Pierau.
 
 ## Markets
 
-The month of May has seen Decred earn some much deserved attention in the markets. New trading pairs and recognition from established financial figures has contributed to the gains. DCR started the month around 0.009 BTC and finished around 0.0125 with interim high of 0.0165 on Bittrex. In terms of USD it started around $81 and finished around $92, temporarily rising to $118. During a period in which most altcoins suffered, Decred has been markedly uncorrelated; rising from rank #45 to #30 on Coinmarketcap.
+The month of May has seen Decred earn some much deserved attention in the markets. New trading pairs and recognition from established financial figures has contributed to the gains. DCR started the month around 0.009 BTC and finished around 0.0125 with interim high of 0.0165 on Bittrex. In USD terms it started around $81 and finished around $92, temporarily rising to $118. During a period in which most altcoins suffered, Decred has been markedly uncorrelated; rising from rank #45 to #30 on Coinmarketcap.
 
 The addition of a much awaited KRW pair on Upbit saw the price briefly double on some exchanges. This pair opens up direct DCR to fiat trading in one of the largest cryptocurrency markets in the world.
 
-May has really been a fantastic month for Decred, news-wise. Price influencing events include: the attendance of several Decred team members at Consensus 2018, the beta launch of ticket splitting toolset by @matheusd, Placeholder VC's bold "Decred Investment Thesis", and both Innosilicon AND iBeLink's surprise launches of yet 2 more Decred ASIC. The controversial independent Weiss crypto report has ranked Decred as one of the top 3 cryptocurrencies. Decred's uniquely secure hybrid PoW/PoS system has also started to get some attention following several high profile hashpower attacks.
+May has really been a fantastic month for Decred, news-wise. Price influencing events include: the attendance of several Decred team members at Consensus 2018, the beta launch of ticket splitting toolset by @matheusd, Placeholder VC's bold "Decred Investment Thesis", and iBeLink's surprise launch of yet another Decred ASIC. The controversial independent Weiss crypto report has ranked Decred as one of the top 3 cryptocurrencies. Decred's uniquely secure hybrid PoW/PoS system has also started to get some attention following several high profile hashpower attacks.
 
 @i2Rav started posting OTC quotes on [#trading](https://decred.slack.com/messages/C3PBR19L4/) channel:
 
@@ -213,13 +210,13 @@ Bitmain [released](https://shop.bitmain.com/product/detail?pid=00020180503154806
 
 [Three](https://www.ccn.com/bitcoin-gold-hit-by-double-spend-attack-exchanges-lose-millions/) [pure PoW](https://cryptovest.com/news/verge-xvg-hacked-again-scrypt-mining-takes-over-entire-network/) [coins](https://www.ccn.com/japanese-cryptocurrency-monacoin-hit-by-selfish-mining-attack/) were [attacked](https://twitter.com/nic__carter/status/998913369741590529) this month, one attempting to be ASIC resistant. This shows the importance of Decred's PoS layer that exerts control over miners and allows Decred to welcome ASIC miners for more PoW security without sacrificing sovereignty to them.
 
-Upbit was [raided](https://www.coindesk.com/koreas-biggest-crypto-exchange-raided-over-suspected-fraud-report/) over suspected fraud and put under investigation. News [followed](https://www.ccn.com/upbit-audit-confirms-south-koreas-biggest-cryptocurrency-exchange-not-at-fault/) revealing it [did not engage](http://news.8btc.com/south-koreas-premature-raid-of-its-biggest-cryptocurrency-exchange-distraughts-investors) in fraud.
+Upbit was [raided](https://www.coindesk.com/koreas-biggest-crypto-exchange-raided-over-suspected-fraud-report/) over suspected fraud and put under investigation. Following news [reported](https://www.ccn.com/upbit-audit-confirms-south-koreas-biggest-cryptocurrency-exchange-not-at-fault/) no illicit activity was found and [suggested](http://news.8btc.com/south-koreas-premature-raid-of-its-biggest-cryptocurrency-exchange-distraughts-investors) and raid was premature and damaged trust in local exchanges.
 
 Circle, the new owner of Poloniex, [announced](https://blog.circle.com/2018/05/15/circle-announces-usd-coin-bitmain-partnership-and-new-strategic-financing/) a USD-backed stablecoin and Bitmain partnership. The plan is to make USDC available as a primary market on Poloniex. More details in the [FAQ](https://www.circle.com/en/usdc-faq).
 
 Poloniex [announced](https://poloniex.com/press-releases/2018.05.01-Coming-May-15-consistent-competitive-trading-fees/) lower trading fees.
 
-Bittrex [plans](https://www.ccn.com/washington-based-bittrex-lists-usd-trading-pairs-after-landing-banking-partner/) to offer USD trading pairs. It was [reported](https://decred.slack.com/archives/C0NRMDVMJ/p1527502501000413) they also lowered DCR withdrawal fee to 0.01.
+Bittrex [plans](https://www.ccn.com/washington-based-bittrex-lists-usd-trading-pairs-after-landing-banking-partner/) to offer USD trading pairs.
 
 @sumiflow made good progress on correcting Decred market cap on several sites:
 
